--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -123,7 +123,7 @@ $tagBtnColor:#2E303A;
         color: $tagBtnColor;
     }
 
-    .inline-btn.sort, .inline-btn.optionlist { 
+    .inline-btn.optionlist { 
         background-color: $tagBtnColor;
     }
 
