administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -131,7 +131,7 @@ $tagBtnColor:#2E303A;
         color: $tagBtnColor;
     }
     
-    .dark .calendar .month {
+    .calendar .month {
         background-color: transparent;
     }
  
