--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1,5 +1,5 @@
 /*Login*/
-
+$themeInset:#f0f0f0;
 $tagBtnColor:#e1e1e1;
 
 div#g-recaptcha {
@@ -802,7 +802,7 @@ button.inline-logout {
     padding: 4px;
 }
 .ui-view.inset-shading>div {
-    background-color: #f0f0f0;
+    background-color: $themeInset;
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -819,7 +819,7 @@ button.inline-logout {
 }
 
 .ui-view.inset-menu-shading>div {
-    background-color: #f0f0f0;
+    background-color: $themeInset;
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -2049,7 +2049,7 @@ span.filter-btns.left-justified {
 }
 
 .day.today:after {
-    background: mediumseagreen;
+    background: $themeInset;
     position: absolute;
     content: "";
     width: 50px;
