--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -5,6 +5,8 @@ $darkThemeBG:#030310;
 $darkThemeInset:#030310;
 $tagBtnColor:#2E303A;
 
+$fontColor:#e0e0e2;
+
 .dark{
     .pb-w .template-footer{
         background-color: $darkThemeBG;
@@ -16,12 +18,12 @@ $tagBtnColor:#2E303A;
     }
 
     h2 {
-        color: white;
+        color: $fontColor;
     }
 
     &.ui-view.dashboard-main {
         background-color: $darkThemeBG;
-        color: white;
+        color: $fontColor;
     }
 
     button.inline-logout, label.boolean-field p, .field-value-module.editable:after, .field-value-module .editable:after{
@@ -46,11 +48,11 @@ $tagBtnColor:#2E303A;
 
 
     .navigation-menu label{
-         color: white;
+         color: $fontColor;
     }
 
     .navigation-menu button:hover, .inline-navigation-menu button:hover {
-        color: white;
+        color: $fontColor;
     }
 
     .project-detail span.progress{
@@ -69,18 +71,18 @@ $tagBtnColor:#2E303A;
     .text-input, .discussion-textbox {
         background-color: $darkThemeBG;
         border: 1px solid #4e4e4e;
-        color: white;
+        color: $fontColor;
         border: 1px solid #4e4e4e;
     }
 
     &.pb-c.pb-c-append {
         background-color: $darkThemeInset;
-        color:white;
+        color:$fontColor;
     }
 
 
     .label.top-left, .checkboxStyle {
-        color: white;
+        color: $fontColor;
     }
 
     &.pb-c:after {
@@ -88,11 +90,11 @@ $tagBtnColor:#2E303A;
     }
 
     .WizardTitle li{
-        color:white;
+        color:$fontColor;
     }
 
     &.ui-view.dashboard-main a{
-        color:white;
+        color:$fontColor;
     }
 
 
@@ -116,7 +118,7 @@ $tagBtnColor:#2E303A;
 
     .inline-btn.sort li, .inline-btn.optionlist li {
         border-color:$tagBtnColor;
-        color:white;
+        color:$fontColor;
     }
 
     .inline-btn.sort.hasFilter, .inline-btn.sort.hasOrder {
