--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1,7 +1,7 @@
 /*Login*/
 $themeInset:#f0f0f0;
 $tagBtnColor:#e1e1e1;
-$tag:#333746;
+
 
 $mainStyleColor:#efa82c;
 
@@ -519,7 +519,7 @@ body.dragover .file-item.droppable-hide {
 
 .file-list .file-item:hover .file-container {
     box-shadow:0 0 8px rgba(0,0,0,0.7);
-    border: 1px solid #333746;
+    border: 1px solid $tagBtnColor;
     
 }
 
@@ -907,7 +907,7 @@ button.inline-logout {
     content: attr(data-counter);
     float: right;
     display: inline-block;
-    background-color: #333746;
+    background-color: $tagBtnColor;
     padding: 0px 8px;
     border-radius: 20px;
     font-size: 12px;
@@ -1282,7 +1282,7 @@ img.youtubelogo {
 .donut-chart .chart-center {
   position: absolute;
   border-radius: 50%;
-  background:#333746;
+  background:$tagBtnColor;
 }
 
 
@@ -1929,7 +1929,7 @@ span.filter-btns.left-justified {
 }
 
 .inline-btn.sort li:hover, .inline-btn.optionlist li:hover {
-    background-color: darken(#333746, 10%);
+    background-color: darken($tagBtnColor, 10%);
 }
 
 
@@ -2232,7 +2232,7 @@ button.t-btn {
     left: -58px;
     height: 10px;
     border-radius: 100%;
-    border: 4px solid #333746;
+    border: 4px solid $tagBtnColor;
     top: 23px;
 }
 
