--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -5,6 +5,88 @@ $tagBtnColor:#e1e1e1;
 
 $mainStyleColor:#efa82c;
 
+
+
+
+button.primary-btn.nav-new-btn{
+
+    
+    float: none;
+    margin: 30px 49px;
+    width: 200px;
+    background-color: #ff0058;
+    height: 55px;
+    border-radius: 27.5px;
+    text-transform: capitalize;
+    transition: background-color 2.1s;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    line-height: 30px;
+    font-weight: 100;
+    font-size: 18px;
+    color: #2d2d2d;
+    
+
+    &:before {
+        content: "+ ";
+        float: left;
+        font-size: 25px;
+    }
+
+    &:hover {
+        background-color: #dc004c;
+        transition: background-color 0.2s, box-shadow 0.2s;
+        box-shadow: 0 0 3px rgba(255,255,255,0.1);
+        
+    }
+
+
+    @media screen and (max-width: 1250px) {
+        
+        font-size:13px;
+        width:140px;
+        margin: 30px 20px;
+        padding: 10px 20px;
+    
+        &:after {
+
+            font-size:15px;
+        }
+    }
+
+
+    @media screen and (max-width: 1000px){
+   
+        font-size:0;
+        width:55px;
+        margin: 30px 23px;
+        padding: 10px 20px;
+    
+    }
+}
+
+
+.ui-view.left-panel.closed button.primary-btn.nav-new-btn{
+
+    width:30px;
+    height:30px;
+    margin:10px;
+    line-height:30px;
+    padding:0;
+    margin-top :50px;
+
+    &:before{
+        content:"+";
+        float:none;
+    }
+
+}
+
+
+
+
+
+
+
 div#g-recaptcha {
     margin: 20px 2px;
 }
@@ -2921,46 +3003,6 @@ img.static-map {
 
 
 
-    .ui-view.left-panel.closed .navigation-menu label{
-        font-size: 0;
-        width: 70px;
-        border-top: 1px solid rgba(0,0,0,0.3);
-        display: inline-block;
-    }
-    
-    .ui-view.left-panel.closed .navigation-menu button{
-        font-size: 0;
-        width: 0;
-    }
-    .ui-view.left-panel.closed .ui-navigation-menu>ul{
-        padding:0;
-        text-align:center;
-
-    }
-
-    .ui-view.left-panel.closed .ui-navigation-menu>ul>li{
-        position:relative;
-    }
-    .ui-view.left-panel.closed .navigation-menu li:after{
-        display:none;
-    }
-    
-    
-    .ui-view.left-panel.closed .navigation-menu label:after {
-        width: 0;
-        height: 0;
-        border-top: 7px solid transparent;
-        border-bottom: 7px solid transparent;
-        border-left: 10px solid #ceb250;
-        border-right: none;
-        left: -9px;
-        top:12px;
-        content:"";
-        position:relative;
-
-    }
-
-
 
 
 
@@ -3138,11 +3180,47 @@ img.static-map {
     }
 
 
-    @media screen and (max-width: 1250px){
-        .navigation-menu ul li {
-            padding-left: 10px;
-        }
+    
+
+    .ui-view.left-panel.closed .navigation-menu label{
+        font-size: 0;
+        width: 70px;
+        border-top: 1px solid rgba(0,0,0,0.3);
+        display: inline-block;
     }
+    
+    .ui-view.left-panel.closed .navigation-menu button{
+        font-size: 0;
+        width: 0;
+    }
+    .ui-view.left-panel.closed .ui-navigation-menu>ul{
+        padding:0;
+        text-align:center;
+
+    }
+
+    .ui-view.left-panel.closed .ui-navigation-menu>ul>li{
+        position:relative;
+    }
+    .ui-view.left-panel.closed .navigation-menu li:after{
+        display:none;
+    }
+    
+    
+    .ui-view.left-panel.closed .navigation-menu label:after {
+        width: 0;
+        height: 0;
+        border-top: 7px solid transparent;
+        border-bottom: 7px solid transparent;
+        border-left: 10px solid #ceb250;
+        border-right: none;
+        left: -9px;
+        top:12px;
+        content:"";
+        position:relative;
+
+    }
+
 
 
 
@@ -3157,19 +3235,24 @@ img.static-map {
 
 
 
-
-
-
-
-
-/**Navigation Menu**/
-
-   .ui-view.left-panel.closed .ui-navigation-menu>.expand>label:after {
+       .ui-view.left-panel.closed .ui-navigation-menu>.expand>label:after {
     top:0px;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-bottom: 7px solid #ceb250;
     }
+
+
+@media screen and (max-width: 1250px){
+        .navigation-menu ul li {
+            padding-left: 10px;
+        }
+    }
+
+
+/**Navigation Menu**/
+
+
     
     .uitext-container.disabled:after {
     content: "* disabled";
